--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,6 +8,6 @@
 
     <body>
         <div id="app"></div>
-        <script type="module" src="/main.jsx"></script>
+        <script type="module" src="/main.tsx"></script>
     </body>
 </html>
